--- a/config/storage.yml
+++ b/config/storage.yml
@@ -7,12 +7,12 @@ local:
   root: <%= Rails.root.join("storage") %>
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
-# amazon:
-#   service: S3
-#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-#   region: us-east-1
-#   bucket: your_own_bucket
+amazon:
+  service: S3
+  access_key_id: <%= ENV('AKIAW4D466ZKIDLR3IN6') %>
+  secret_access_key: <%= ENV('4ANle760zs8tICRr/muA0KFiBNCUG1dEyTjgHzIq') %>
+  region: eu-west-3
+  bucket: noemiephoto
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
